<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/list_item_horizontal_margin"
    android:orientation="horizontal">

    <TextView
        android:layout_width="@dimen/width_50dp"
        android:layout_height="wrap_content"
        android:text="@string/header_list_user_id"
        android:textColor="@color/textDefaultColor" />

    <TextView
        android:layout_width="@dimen/width_100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_horizontal_margin"
        android:text="@string/header_list_user_type_inscription"
        android:textColor="@color/textDefaultColor" />


    <TextView
        android:layout_width="@dimen/width_200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_horizontal_margin"
        android:text="@string/header_list_user_name"
        android:textColor="@color/textDefaultColor" />

    <TextView
        android:layout_width="@dimen/width_150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_horizontal_margin"
        android:text="@string/header_list_user_email"
        android:textColor="@color/textDefaultColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_horizontal_margin"
        android:text="@string/header_list_user_delivered"
        android:textColor="@color/textDefaultColor" />

</LinearLayout>